Add completed query parameter to OpenAPI docs
